# impzap

./: .gitignore  CLAUDE.md  Makefile  README.md  analyze_final.sh  bench_csv.py  bench_csv_hmmcfr_v8.py  bench_deterministic_baseline.txt  bench_matrix.py  bench_matrix_results.txt  bench_matrix_results_seeded.txt  bench_per_game_hmmcfr_v8.csv  bench_seeded_play.txt  bench_stats.py  bench_stats_marginal.csv  bench_stats_marginal_final.csv  bench_stats_mcnemar.csv  bench_stats_mcnemar_final.csv  merge_csv.sh  play.py  pyproject.toml  train.py  train_cfr.py
.claude/: settings.json
.claude/rules/: algorithms.md  go-engine.md  training.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/retrain/: SKILL.md
agents/: always_fold_agent.py  always_raise_agent.py  card_utils.py  cfr_agent.py  deterministic_agent.py  heuristic_agent.py  hmm_agent.py  hmm_cfr_agent.py  mcts_agent.py  random_agent.py  reinforce_agent.py
engine/: cfr.go  cfr_exports.go  go.mod  rng.go  rollout.go  trucolib.go
models/: cfr.pkl  reinforce.pth  reinforce_10000eps.pth  reinforce_50000eps.pth
slides/figures/: Makefile  requirements-figs.txt
slides/figures/src/: _style.py  slide_05_escada_pontos.py  slide_06_arquitetura.py  slide_08_matriz_paradigmas.py  slide_09_reinforce_curve.py  slide_12_jornada_cfr.py  slide_13_cfr_v9_oponentes.py  slide_16_despacho_hmm_cfr.py
truco_env/: env.py  seeding.py  wrappers.py
