[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "impzap"
version = "0.1.0"
dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "matplotlib>=3.10.8" 
]

[tool.setuptools.packages.find]
include = ["truco_env", "agents"]